[package]
name = "spook"
edition  = "2021"
version = "0.0.1"

[dependencies]
rp2040-hal     = {version = "0.7.0", features = ["rt"] }
rp2040-boot2   = "0.2.1"
panic-halt     = "0.2.0"
cortex-m       = {version = "0.7.2", features = ["critical-section-single-core"] }
cortex-m-rt    = "0.7.3"
embedded-alloc = "0.5.0"
embedded-hal   = {version = "0.2.5", features = ["unproven"] }
fugit          = "0.3.7"
rand           = {version = "0.8.3", features = ["small_rng"], default-features = false }
